fix text gradient clipping text

--- a/apps/website/app/globals.css
+++ b/apps/website/app/globals.css
@@ -300,4 +300,7 @@ input[type="email"] {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  /* to prevent some text from clipping, like "g"s - check */
+  padding-bottom: 0.12rem;
+  margin-bottom: -0.12rem;
 }
